--- a/package.json
+++ b/package.json
@@ -6,22 +6,29 @@
   "author": "John Barbosa",
   "homepage": "https://github.com/j0hnbarbosa/node_chat#readme",
   "scripts": {
+    "start": "nodemon --exec babel-node src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/j0hnbarbosa/node_chat.git"
   },
-  "keywords": ["nodeJs", "node","chat"],
+  "keywords": [
+    "nodeJs",
+    "node",
+    "chat"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/j0hnbarbosa/node_chat/issues"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6"
   },
   "devDependencies": {
+    "eslint": "^7.16.0",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
