--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "John Barbosa",
   "homepage": "https://github.com/j0hnbarbosa/node_chat#readme",
   "scripts": {
-    "start": "nodemon --exec babel-node src",
+    "api": "nodemon --exec babel-node api/src",
+    "web": "nodemon --exec babel-node web/src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +24,12 @@
     "url": "https://github.com/j0hnbarbosa/node_chat/issues"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.6",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
