--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "api": "nodemon --exec babel-node api/src",
     "web": "nodemon --exec babel-node web/src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "babel-node": "babel-node" 
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,8 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
