--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "api": "nodemon --exec babel-node api/src",
     "web": "nodemon --exec babel-node web/src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "babel-node": "babel-node" 
+    "babel-node": "babel-node"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "url": "https://github.com/j0hnbarbosa/node_chat/issues"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -35,10 +36,13 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "eslint": "^7.16.0",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11"
+    "@babel/preset-env": "^7.12.11",
+    "@babel/register": "^7.12.10",
+    "babel-register": "^6.26.0",
+    "eslint": "^7.16.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
