--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "api": "nodemon --exec babel-node api/src",
     "web": "nodemon --exec babel-node web/src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "babel-node": "babel-node"
+    "babel-node": "babel-node",
+    "start": "start npm run api && start npm run web"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
